feat(common): add tls/ssl support for database connections